syntax = "proto3";

option go_package ="./pb";

package pb;

message UserGetReq {
   int64 Id = 1;
}
message UserGetResp{

}

message UserSaveReq {

}
message UserSaveResp{

}

message UserDeleteReq {
  int64 Id = 1;
}
message UserDeleteResp{

}

message UserUpdateReq {
  int64 Id = 1;
}
message UserUpdateResp{

}

message UserSearchReq {
  int64 PageNumber = 1;
  int64 PageSize = 2;
}
message UserSearchResp{
  repeated UserItem List =1;
  int64  Total =2;
}
message UserItem {

}

service UserService {
  rpc UserGet(UserGetReq) returns(UserGetResp);
  rpc UserSave(UserSaveReq) returns(UserSaveResp);
  rpc UserDelete(UserDeleteReq) returns(UserDeleteResp);
  rpc UserUpdate(UserUpdateReq) returns(UserUpdateResp);
  rpc UserSearch(UserSearchReq) returns(UserSearchResp);
}